[package]
name = "griddb-sys"
version = "5.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
include = [
  "LICENSE",
  "README.md",
  "Cargo.toml",
  "build.rs",
  "src/*.rs",
  "src/**/*.rs",
]

[lib]
name = "griddb_sys"
path = "src/lib.rs"

[dependencies]
clang-sys = { version = "1", features = ["clang_6_0"] }

[build-dependencies]
bindgen = "0.59.1"

[features]
static = ["clang-sys/static"]
runtime = ["clang-sys/runtime"]
